@@ -469,10 +469,10 @@ oncoplot = function(maf, top = 20, genes = NULL, mutsig = NULL, mutsigQval = 0.1
   #Plot annotations if any
   if(!is.null(clinicalFeatures)){
 
-    clini_lvls = as.character(unlist(lapply(annotation, function(x) unique(x))))
+    clini_lvls = as.character(unlist(lapply(annotation, function(x) unique(as.character(x)))))
 
     if(is.null(annotationColor)){
-      annotationColor = get_anno_cols(ann = annotation, numericAnnoCol = numericAnnoCol)
+      annotationColor = get_anno_cols(ann = annotation)
     }
 
     anno_cols = c()
@@ -481,37 +481,36 @@ oncoplot = function(maf, top = 20, genes = NULL, mutsig = NULL, mutsigQval = 0.1
     }
 
     clini_lvls = clini_lvls[!is.na(clini_lvls)]
-    names(clini_lvls) = paste0('cl_', 1:length(clini_lvls))
+    temp_names = sample(x = setdiff(x = 1:1000, y = as.numeric(as.character(clini_lvls))), size = length(clini_lvls), replace = FALSE)
+    names(clini_lvls) = temp_names#1:length(clini_lvls)
     temp_rownames = rownames(annotation)
     annotation = data.frame(lapply(annotation, as.character),
                             stringsAsFactors = FALSE, row.names = temp_rownames)
 
     for(i in 1:length(clini_lvls)){
-      annotation[annotation == clini_lvls[i]] = names(clini_lvls)[i]
+      annotation[annotation == clini_lvls[i]] = names(clini_lvls[i])
     }
 
-    annotation = annotation[colnames(numMat), ncol(annotation):1, drop = FALSE]
+    annotation = data.frame(lapply(annotation, as.numeric), stringsAsFactors=FALSE, row.names = temp_rownames)
 
+    annotation = annotation[colnames(numMat), ncol(annotation):1, drop = FALSE]
     if(!drawRowBar){
       par(mar = c(0, 5, 0, 5), xpd = TRUE)
     }else{
       par(mar = c(0, 5, 0, 3), xpd = TRUE)
     }
 
-    image(x = 1:nrow(annotation), y = 1:ncol(annotation), z = matrix(0, nrow = nrow(annotation), ncol = ncol(annotation)),
+    image(x = 1:nrow(annotation), y = 1:ncol(annotation), z = as.matrix(annotation),
           axes = FALSE, xaxt="n", yaxt="n", bty = "n",
           xlab="", ylab="", col = "white") #col = "#FC8D62"
 
     #Plot for all variant classifications
-    return(list(annotation, clini_lvls, anno_cols))
     for(i in 1:length(names(clini_lvls))){
       anno_code = clini_lvls[i]
-      col = anno_cols[as.character(anno_code)]
+      col = anno_cols[anno_code]
+      #temp_anno = t(apply(annotation, 2, rev))
       temp_anno = as.matrix(annotation)
       temp_anno[temp_anno != names(anno_code)] = NA
-      temp_anno[temp_anno == names(anno_code)] = 1
-      temp_anno = apply(temp_anno, 2, as.numeric)
-      print(head(temp_anno))
       image(x = 1:nrow(temp_anno), y = 1:ncol(temp_anno), z = temp_anno,
             axes = FALSE, xaxt="n", yaxt="n", xlab="", ylab="", col = col, add = TRUE)
     }
